--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<!--Contenedor principal de mi pargina web-->
 		<div class="galeria">
-			<h1>Galeria Titulacion CFGS ASIR</h1>
+			<h1>Galeria Eeveelutions</h1>
 			<div class="linea"></div>
 			<!--contenedor de imagenes de mi web-->
 			<div class="contenedor-imagenes">
@@ -18,63 +18,63 @@
 					<img src="img/foto1.jpg" alt="" />
 					<!--capa para dar sensacion de animacion a mi imagen-->
 					<div class="overlay">
-						<h2>Informacion CFGS ASIR</h2>
+						<h2>Eevee</h2>
 					</div>
 				</div>
 				<div class="image">
 					<img src="img/foto2.png" alt="" />
 					<!--capa para dar sensacion de animacion a mi imagen-->
 					<div class="overlay rojo">
-						<h2>Informacion CFGS ASIR</h2>
+						<h2>Flareon</h2>
 					</div>
 				</div>
 				<div class="image">
 					<img src="img/foto3.jpg" alt="" />
 					<!--capa para dar sensacion de animacion a mi imagen-->
-					<div class="overlay">
-						<h2>Informacion CFGS ASIR</h2>
+					<div class="overlay amarillo">
+						<h2>Jolteon</h2>
 					</div>
 				</div>
 				<div class="image">
 					<img src="img/foto4.jpg" alt="" />
 					<!--capa para dar sensacion de animacion a mi imagen-->
-					<div class="overlay">
-						<h2>Informacion CFGS ASIR</h2>
+					<div class="overlay azul">
+						<h2>Vaporeon</h2>
 					</div>
 				</div>
 				<div class="image">
 					<img src="img/foto5.png" alt="" />
 					<!--capa para dar sensacion de animacion a mi imagen-->
-					<div class="overlay">
-						<h2>Informacion CFGS ASIR</h2>
+					<div class="overlay gris">
+						<h2>Umbreon</h2>
 					</div>
 				</div>
 				<div class="image">
 					<img src="img/foto6.png" alt="" />
 					<!--capa para dar sensacion de animacion a mi imagen-->
-					<div class="overlay">
-						<h2>Informacion CFGS ASIR</h2>
+					<div class="overlay morado">
+						<h2>Espeon</h2>
 					</div>
 				</div>
 				<div class="image">
 					<img src="img/foto7.jpg" alt="" />
 					<!--capa para dar sensacion de animacion a mi imagen-->
-					<div class="overlay">
-						<h2>Informacion CFGS ASIR</h2>
+					<div class="overlay cyan">
+						<h2>Glaceon</h2>
 					</div>
 				</div>
 				<div class="image">
 					<img src="img/foto8.jpg" alt="" />
 					<!--capa para dar sensacion de animacion a mi imagen-->
-					<div class="overlay">
-						<h2>Informacion CFGS ASIR</h2>
+					<div class="overlay verde">
+						<h2>Leafeon</h2>
 					</div>
 				</div>
 				<div class="image hidden">
 					<img src="img/foto9.png" alt="" />
 					<!--capa para dar sensacion de animacion a mi imagen-->
-					<div class="overlay">
-						<h2>Informacion CFGS ASIR</h2>
+					<div class="overlay rosa">
+						<h2>Sylveon</h2>
 					</div>
 				</div>
 			</div>
